--- a/grafbase/package.json
+++ b/grafbase/package.json
@@ -1,15 +1,6 @@
 {
-  "author": "next-dribbble-clone-app-grafbase",
-  "description": "",
+  "private": true,
   "devDependencies": {
-    "@grafbase/sdk": "~0.12.0"
-  },
-  "keywords": [],
-  "license": "ISC",
-  "main": "index.js",
-  "name": "grafbase",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "version": "1.0.0"
+    "@grafbase/sdk": "^0.12.0"
+  }
 }
